# CMake_Example_Project

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/evolution/: CMakeLists.txt
src/evolution/include/evolution/: evolution.hpp
src/evolution/src/: evolution.cpp
src/initial/: CMakeLists.txt
src/initial/include/initial/: initial.hpp
src/initial/src/: initial.cpp
src/io/: CMakeLists.txt
src/io/include/io/: io.hpp
src/io/src/: io.cpp
src/parser/: CMakeLists.txt
src/parser/include/parser/: parser.hpp
src/parser/src/: parser.cpp
tests/: CMakeLists.txt  test.cpp
